--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 html{
-    height: 100vh;
+    height: auto;
     width: 100vw;
 }
 body {
@@ -13,24 +13,25 @@ body {
     display: flex;
     flex-flow: column;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 header {
-    height: 100%;
+    height: 70px;
     width: 100%;
-    z-index: 20;
+    background: linear-gradient(to right, var(--color-pink) 20%, var(--color-dark-violet)60%, #211630 70%, #08050c 100%);
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 #navigace {
-    position: sticky;
-    top: 0;
     display: flex;
     height: 70px;
-    background: linear-gradient(to right, var(--color-pink) 20%, var(--color-dark-violet)60%, #211630 70%, #08050c 100%);
     overflow: hidden;
     width: 100%;
     margin: 0 auto;
     box-shadow: 0 4px 10px -2px rgba(0, 0, 0, 0.5);
+    z-index: 4;
 }
 
 #logo {
@@ -64,20 +65,31 @@ nav a:hover {
 }
 button {
     margin-left: 100px;
-    background: linear-gradient(to right, #71b3ec, #d353f7 );
     border-radius: 15px;
     padding: 1px 15px;
     height: 40px;
     margin-top: 15px;
     font-size: 1em;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    border: 0px solid transparent;
+    border: 0; /* Odstraní rámeček */
+    outline: none; 
+    transition: box-shadow 0.3s ease, color 0.3s ease;
+    box-shadow: 0px 0px 16px 8px #71b3ec;
+    color: #291C3A;
 }
 
+button:hover {
+   cursor: not-allowed;
+   box-shadow: 0px 0px 16px 8px rgb(207, 201, 201);
+   color: rgb(207, 201, 201);
+
+   
+}
 content {
     display: flex;
     flex-flow: column;
-    height: 100%;
+    height: 1450px;    
     width: 100%;
     background: linear-gradient(to right, var(--color-light-violet) 20%, var(--color-dark-violet)50%, #211630 70%, #08050c 100%);
     position: relative;
@@ -85,7 +97,7 @@ content {
 
 #ahoj-text {
     display: flex;
-    font-size: 3em;
+    font-size: 4em;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     width: 550px;
@@ -98,7 +110,7 @@ content {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #9864c4;
     width: 550px;
-    padding: 1px;
+    padding: 5px;
 
 }
 #tvorim-text {
@@ -112,7 +124,9 @@ content {
 
 }
  #texty {
+    
     margin: 120px;
+
  }
 
  #programmer {
@@ -121,10 +135,11 @@ content {
     right: -180px;
     width: 800px;
     height: 800px;
-    z-index: 20;
     background: url('../images/ksicht.png') no-repeat center center;
     background-size: cover;
     mask-image: linear-gradient(90deg, transparent, black 20%, black 80%, transparent);
+    z-index: 2;
+
 }
 
 #cary {
@@ -135,6 +150,168 @@ content {
     right: 200px;
     width: 800px;
     height: 800px;
-    z-index: 20;
     mask-image: linear-gradient(90deg, transparent, black 20%, black 80%, transparent);
+    z-index: 2;
+
+}
+
+#icony-text {
+    display: flex;
+    flex-flow: row;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    margin-left: 100px;
+    margin-top: -40px;
+}
+
+#znalosti-pruh {
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+    height: 120px;
+    /* position: absolute; */
+    display: flex;
+    background-color: #291C3A;
+    justify-content: center;
+    box-shadow: 0px 0px 4px 2px #08050c;
+    z-index: 2;
+    margin-top: 100px;
+}
+
+#znalosti-pruh img {
+    height: 80px;
+    width: 80px;
+    margin: 20px;
+    
+}
+#ukazka-prace {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+#ukazka-prace > span {
+    display: block;
+    padding: 20px;
+    text-align: center;
+    font-size: 3em;
+    color: white;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 20px;
+    position: relative;
+}
+#ukazka-prace > span::after {
+    content: " ";
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: linear-gradient(to right, #71b3ec, #d353f7 );
+
+} 
+
+
+
+
+
+footer {
+    height: 70px;
+    background-color: #08050c ;
+    box-shadow: 0px -2px 5px 1px #08050c;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-flow: column;
+    overflow: hidden;
+    position: relative;
+}
+
+
+#footer-logo img{
+    width: 200px;
+    height: 200px;
+}
+
+#footer-text {
+    position: absolute;
+    bottom: 0;
+    color: white;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#github,
+#facebook,
+#linkedin {
+    /* box-shadow: 2px 2px 2px #00000080, 10px 1px 12px #00000080, 2px 2px 10px #00000080, 2px 2px 3px #00000080,
+    inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080, inset 2px 2px 10px #00000080; */
+    border-radius: 29px;
+    padding: 11px 19px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #0072ff, 0 0 100px #0072ff, 0 0 150px #0072ff, 0 0 200px #0072ff;
+    font-size: 64px;
+    /* background-color: #18191f; */
+    color: #fff;
+    height: 85px;
+    margin: 15px;
+}
+
+#facebook {
+    animation-delay: 0.3s;
+}
+
+#linkedin {
+    animation-delay: 0.7s;
+}
+
+#icony-text a {
+    cursor: pointer;
+    height: 85px;
+}
+
+#icony-text a:hover > i{
+    color: #71b3ec;
+}
+
+#icony-text a.disabled:hover{
+    cursor: not-allowed;
+}
+
+#icony-text a.disabled:hover > i{
+    color: black;
+}
+
+@keyframes animate {
+   from {
+       filter: hue-rotate(0deg);
+   }
+    to {
+         filter: hue-rotate(360deg);
+    }
+}
+#ukazka {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    flex: 1;
+
+}
+#ukazka > div {
+    flex: 1;
+    background-color: var(--color-light-violet);
+    height: calc(100% - 70px);
+    width: calc(100% - 70px);
+    margin: 35px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 8px 4px #08050c;
+    background: url('../images/stavba.png') no-repeat center center;
+    background-position: 45% -250%;
+    background-size: 50%;
 }
